Fixed dropdown menu FINALLY
Dropdown now overlaps everything else on the page, yay.

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ Images
 --- */
 img {
 	border: 1px solid;
-	box-shadow: -10px 25px 40px 0px rgba(0, 0, 0, 1);
+	box-shadow: -10px 10px 40px 0px rgba(0, 0, 0, 1);
 }
 
 /* ---
@@ -42,7 +42,6 @@ Navbar
 	margin-bottom: 30px;
 	float: left;
 	border-radius: 0px;
-	overflow: hidden;
 	width: 100%;
 }
 
@@ -94,6 +93,7 @@ Dropdown Menu
 --- */
 .dropdownMenu {
 	position: relative;
+	z-index: 1;
 }
 
 #dropdownContent a:hover {
@@ -102,8 +102,8 @@ Dropdown Menu
 
 .dropdownContent {
 	display: none;
-	position: relative;
-	margin-top: 3px;
+	position: absolute;
+	margin-top: 0;
 	background-color: #30473f;
 	min-width: 100%;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
